Add more project images

--- a/src/jade/projects/_projects-content-body.jade
+++ b/src/jade/projects/_projects-content-body.jade
@@ -5,38 +5,54 @@ main.projects-content
     h2.projects-content__group-header.section-heading__text Career
     .section-heading__line.section-heading__line--right
 
-    div.project#project-name1
+    div.project#cloudcheckr-cmx
       h3.home-project__name CloudCheckr CMx
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
-      //- img(src="img/dashboards_1x.png", srcset="img/dashboards_1x.png 1x, img/dashboards_2x.png 2x", class="project__image", title="", alt="")
+      img(src="img/landing_page_1x.png", srcset="img/landing_page_1x.png 1x, img/landing_page_2x.png 2x", class="project__image", title="", alt="")
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      img(src="img/dashboards_1x.png", srcset="img/dashboards_1x.png 1x, img/dashboards_2x.png 2x", class="project__image", title="", alt="")
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      img(src="img/account_list_1x.png", srcset="img/account_list_1x.png 1x, img/account_list_2x.png 2x", class="project__image", title="", alt="")
+      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      img(src="img/overview_page_iPhone_X.png", class="project__image project__image-mobile", title="", alt="")
+      //- desktop only
+      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      img(src="img/customization_page_1x.png", srcset="img/customization_page_1x.png 1x, img/customization_page_2x.png 2x", class="project__image", title="", alt="")
       a(href="" class="project__demo-link") See it here!
 
-    div.project#project-name2
-      h3.home-project__name Project Name
-      img(src="", alt="" class="project__image")
+    div.project#chime
+      h3.home-project__name Chime Signup
+      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+      img(src="img/chime_desktop_1x.png", srcset="img/chime_desktop_1x.png 1x, img/chime_desktop_2x.png 2x", class="project__image", title="", alt="")
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      img(src="img/chime_mobile.png", class="project__image project__image-mobile", title="", alt="")
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
 
-    div.project#project-name3
-      h3.home-project__name Project Name
-      img(src="", alt="" class="project__image")
+    div.project#jorsek-docs
+      h3.home-project__name Jorsek Docs Portal
+      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+      img(src="img/docs_portal_1x.png", srcset="img/docs_portal_1x.png 1x, img/docs_portal_2x.png 2x", class="project__image", title="", alt="")
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      img(src="img/docs_portal_content_1x.png", srcset="img/docs_portal_content_1x.png 1x, img/docs_portal_content_2x.png 2x", class="project__image", title="", alt="")
+
+    div.project#sasb-nav
+      h3.home-project__name SASB Navigator
+      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+      img(src="img/SASB_SN_1x.jpg", srcset="img/SASB_SN_1x.jpg 1x, img/SASB_SN_2x.jpg 2x", class="project__image", title="", alt="")
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
 
   section.projects-content__group
     h2.section-heading__text For Fun
     .section-heading__line.section-heading__line--right
 
-    div.project#project-name4
-      h3.home-project__name Project Name
-      img(src="", alt="" class="project__image")
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+    div.project#better-reads
+      h3.home-project__name Better Reads
+      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+      img(src="img/Better_Reads_1x.png", srcset="img/Better_Reads_1x.png 1x, img/Better_Reads_2x.png 2x", class="project__image", title="", alt="")
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
 
-    div.project#project-name5
-      h3.home-project__name Project Name
-      img(src="", alt="" class="project__image")
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+    div.project#commutecast
+      h3.home-project__name CommuteCast
+      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+      img(src="img/Commute_Cast_1x.jpg", srcset="img/Commute_Cast_1x.jpg 1x, img/Commute_Cast_2x.jpg 2x", class="project__image", title="", alt="")
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
