--- a/src/jade/main/_projects.jade
+++ b/src/jade/main/_projects.jade
@@ -6,15 +6,31 @@ section.home-projects
 
     .home-projects__wrapper
       +home-project(
-        "#",
+        "/projects#cloudcheckr-cmx",
+        "CloudCheckr CMx",
+        "A kick-ass cloud platform management system.",
+        "img/landing_page_1x.png",
+        "img/landing_page_2x.png 2x, img/landing_page_1x.png 1x",
+        "cloudcheckr")
+
+      +home-project(
+        "/projects#chime",
+        "Chime Signup",
+        "A sleek and simple signup flow for onboarding customers to a whole new level of mobile banking.",
+        "img/chime_desktop_cropped_1x.png",
+        "img/chime_desktop_cropped_2x.png 2x, img/chime_desktop_cropped_1x.png 1x",
+        "chime")
+
+      +home-project(
+        "/projects#jorsek-docs",
         "Docs Portal",
         "A documentation portal that allows ease of access to content.",
-        "img/Docs_Portal_1x.jpg",
-        "img/Docs_Portal_2x.jpg 2x, img/Docs_Portal_1x.jpg 1x",
+        "img/docs_portal_cropped_1x.jpg",
+        "img/docs_portal_cropped_2x.jpg 2x, img/docs_portal_cropped_1x.jpg 1x",
         "docs-portal")
         
       +home-project(
-        "#",
+        "/projects#sasb-nav",
         "SASB Navigator",
         "A high-performance navigator to help companies find the right sustainability information.",
         "img/SASB_SN_1x.jpg",
@@ -22,7 +38,7 @@ section.home-projects
         "sasb-navigator")
 
       +home-project(
-        "#",
+        "/projects#better-reads",
         "Better Reads",
         "A prototype SPA powered by React.js that leverages Google Books to seamlessly allow book searching and list creation.",
         "img/Better_Reads_1x.png",
@@ -30,7 +46,7 @@ section.home-projects
         "better-reads")
 
       +home-project(
-        "#",
+        "/projects#commutecast",
         "CommuteCast",
         "A Google Map canvas that plots weather forecasts along any inputted route, utilizing several Maps APIs and Forecast.io.",
         "img/Commute_Cast_1x.jpg",
