Additional skill icons

--- a/src/jade/main/_skills.jade
+++ b/src/jade/main/_skills.jade
@@ -31,6 +31,8 @@ section.home-skills
     img(class="home-skill-icon home-skill-icon__js" src="img/js.png", title="JavaScript" alt="JavaScript Icon")
     img(class="home-skill-icon home-skill-icon__redux" src="img/Redux_1x.png", srcset="img/Redux_1x.png 1x, img/Redux_2x.png 2x", title="Redux" alt="Redux Icon")
     include ../../svg/skill-icons/react.svg
+    include ../../svg/skill-icons/storybook.svg
+    include ../../svg/skill-icons/single-spa.svg
     include ../../svg/skill-icons/jquery.svg
     include ../../svg/skill-icons/webpack.svg
     include ../../svg/tool-icons/gulp.svg
