Tweaks to mobile Projects

--- a/src/jade/projects/_projects-content-body.jade
+++ b/src/jade/projects/_projects-content-body.jade
@@ -18,7 +18,10 @@ main.projects-content
       //- desktop only
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
       img(src="img/customization_page_1x.png", srcset="img/customization_page_1x.png 1x, img/customization_page_2x.png 2x", class="project__image", title="", alt="")
-      a(href="" class="project__demo-link") See it here!
+      a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
+        include ../../svg/misc-icons/link.svg
+        |Check out the latest in cloud management software!
+
 
     div.project#chime
       h3.home-project__name Chime Signup
@@ -27,6 +30,9 @@ main.projects-content
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
       img(src="img/chime_mobile.png", class="project__image project__image-mobile", title="", alt="")
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
+        include ../../svg/misc-icons/link.svg
+        |See it here!
 
     div.project#jorsek-docs
       h3.home-project__name Jorsek Docs Portal
@@ -34,12 +40,18 @@ main.projects-content
       img(src="img/docs_portal_1x.png", srcset="img/docs_portal_1x.png 1x, img/docs_portal_2x.png 2x", class="project__image", title="", alt="")
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
       img(src="img/docs_portal_content_1x.png", srcset="img/docs_portal_content_1x.png 1x, img/docs_portal_content_2x.png 2x", class="project__image", title="", alt="")
+      a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
+        include ../../svg/misc-icons/link.svg
+        |See it here!
 
     div.project#sasb-nav
       h3.home-project__name SASB Navigator
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
       img(src="img/SASB_SN_1x.jpg", srcset="img/SASB_SN_1x.jpg 1x, img/SASB_SN_2x.jpg 2x", class="project__image", title="", alt="")
       p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
+        include ../../svg/misc-icons/link.svg
+        |See it here!
 
   section.projects-content__group
     h2.section-heading__text For Fun
