--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -26,6 +26,7 @@
 @import 'modules/home-contact/home-contact';
 @import 'modules/home-about-modal/home-about-modal';
 @import 'modules/contact-modal/contact-modal';
+@import 'modules/mobile-phone/mobile-phone';
 @import 'modules/contact-form/contact-form';
 @import 'modules/overlay/page-overlay';
 
