--- a/src/jade/projects/_projects-content-body.jade
+++ b/src/jade/projects/_projects-content-body.jade
@@ -6,65 +6,84 @@ main.projects-content
     .section-heading__line.section-heading__line--right
 
     div.project#cloudcheckr-cmx
-      h3.home-project__name CloudCheckr CMx
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
-      img(src="img/landing_page_1x.png", srcset="img/landing_page_1x.png 1x, img/landing_page_2x.png 2x", class="project__image", title="", alt="")
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
-      img(src="img/dashboards_1x.png", srcset="img/dashboards_1x.png 1x, img/dashboards_2x.png 2x", class="project__image", title="", alt="")
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
-      img(src="img/account_list_1x.png", srcset="img/account_list_1x.png 1x, img/account_list_2x.png 2x", class="project__image", title="", alt="")
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
-      img(src="img/overview_page_iPhone_X.png", class="project__image project__image-mobile", title="", alt="")
+      .project__feature.project__feature--overflow
+        .project__intro-copy
+          h3.home-project__name CloudCheckr CMx
+          p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+        .project__image-macbook-wrapper
+          img(src="img/macbook_right.png", class="project__image-macbook", title="", alt="")
+          img(src="img/landing_page_1x.png", srcset="img/landing_page_1x.png 1x, img/landing_page_2x.png 2x", class="project__image-cc-welcome", title="", alt="")
+      .project__feature--column
+        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+        img(src="img/dashboards_1x.png", srcset="img/dashboards_1x.png 1x, img/dashboards_2x.png 2x", class="project__image", title="", alt="")
+      .project__feature--column
+        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+        img(src="img/account_list_1x.png", srcset="img/account_list_1x.png 1x, img/account_list_2x.png 2x", class="project__image", title="", alt="")
+      .project__feature--row
+        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+        img(src="img/overview_page_iPhone_X.png", class="project__image project__image-mobile", title="", alt="")
       //- desktop only
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
-      img(src="img/customization_page_1x.png", srcset="img/customization_page_1x.png 1x, img/customization_page_2x.png 2x", class="project__image", title="", alt="")
-      a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
-        include ../../svg/misc-icons/link.svg
-        |Check out the latest in cloud management software!
-
+      .project__feature--column
+        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+        img(src="img/customization_page_1x.png", srcset="img/customization_page_1x.png 1x, img/customization_page_2x.png 2x", class="project__image", title="", alt="")
+        a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
+          include ../../svg/misc-icons/link.svg
+          |Check out the latest in cloud management software!
 
     div.project#chime
       h3.home-project__name Chime Signup
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
-      img(src="img/chime_desktop_1x.png", srcset="img/chime_desktop_1x.png 1x, img/chime_desktop_2x.png 2x", class="project__image", title="", alt="")
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
-      img(src="img/chime_mobile.png", class="project__image project__image-mobile", title="", alt="")
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      .project__feature.project__feature--overflow.project__feature--chime
+        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+        .project__image-chime-wrapper
+          img(src="img/chime_desktop_1x.png", srcset="img/chime_desktop_1x.png 1x, img/chime_desktop_2x.png 2x", class="project__image", title="", alt="")
+          //- include ../modules/_mobile-phone.jade
+          //- img(src="img/chime_mobile.png", class="project__image project__image-mobile", title="", alt="")
+      .project__feature--column
+        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+      p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
       a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
         include ../../svg/misc-icons/link.svg
         |See it here!
 
     div.project#jorsek-docs
       h3.home-project__name Jorsek Docs Portal
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
-      img(src="img/docs_portal_1x.png", srcset="img/docs_portal_1x.png 1x, img/docs_portal_2x.png 2x", class="project__image", title="", alt="")
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
-      img(src="img/docs_portal_content_1x.png", srcset="img/docs_portal_content_1x.png 1x, img/docs_portal_content_2x.png 2x", class="project__image", title="", alt="")
+      .project__feature--column
+        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+        img(src="img/docs_portal_1x.png", srcset="img/docs_portal_1x.png 1x, img/docs_portal_2x.png 2x", class="project__image", title="", alt="")
+      .project__feature--column
+        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+        img(src="img/docs_portal_content_1x.png", srcset="img/docs_portal_content_1x.png 1x, img/docs_portal_content_2x.png 2x", class="project__image", title="", alt="")
       a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
         include ../../svg/misc-icons/link.svg
         |See it here!
 
     div.project#sasb-nav
       h3.home-project__name SASB Navigator
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
-      img(src="img/SASB_SN_1x.jpg", srcset="img/SASB_SN_1x.jpg 1x, img/SASB_SN_2x.jpg 2x", class="project__image", title="", alt="")
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      .project__feature--column
+        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+        img(src="img/SASB_SN_1x.jpg", srcset="img/SASB_SN_1x.jpg 1x, img/SASB_SN_2x.jpg 2x", class="project__image", title="", alt="")
+      p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
       a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
         include ../../svg/misc-icons/link.svg
         |See it here!
 
   section.projects-content__group
-    h2.section-heading__text For Fun
+    h2.projects-content__group-header.section-heading__text For Fun
     .section-heading__line.section-heading__line--right
 
     div.project#better-reads
       h3.home-project__name Better Reads
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
-      img(src="img/Better_Reads_1x.png", srcset="img/Better_Reads_1x.png 1x, img/Better_Reads_2x.png 2x", class="project__image", title="", alt="")
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      .project__feature--column
+        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+        img(src="img/Better_Reads_1x.png", srcset="img/Better_Reads_1x.png 1x, img/Better_Reads_2x.png 2x", class="project__image", title="", alt="")
+      p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
+        include ../../svg/misc-icons/link.svg
+        |See it here!
 
     div.project#commutecast
       h3.home-project__name CommuteCast
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
-      img(src="img/Commute_Cast_1x.jpg", srcset="img/Commute_Cast_1x.jpg 1x, img/Commute_Cast_2x.jpg 2x", class="project__image", title="", alt="")
-      p.project__content Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
+      .project__feature--column
+        p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
+        img(src="img/Commute_Cast_1x.jpg", srcset="img/Commute_Cast_1x.jpg 1x, img/Commute_Cast_2x.jpg 2x", class="project__image", title="", alt="")
+      p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
