--- a/src/scss/modules/projects-heading/projects-content-body.scss
+++ b/src/scss/modules/projects-heading/projects-content-body.scss
@@ -7,6 +7,20 @@
     padding-left: 20px;
   }
 
+  @include tablet {
+    max-width: 96%;
+  }
+
+  @include desktop {
+    max-width: 1700px;
+    margin: 0 auto;
+    padding: 0 40px;
+  }
+
+  @include desktop-wide {
+    padding: 0 60px;
+  }
+
   &__header {
     font-size: 3em;
     font-weight: normal;
@@ -15,7 +29,11 @@
 
     @include tablet {
       width: 190px;
-      margin: -90px auto 110px;
+      margin: -90px auto 180px;
+    }
+
+    @include tablet-wide {
+      margin-bottom: 280px;
     }
   }
 
@@ -28,31 +46,231 @@
   }
 
   &__group-header {
+    @include desktop {
+      font-size: 2.15em;
+    }
+    
     + .section-heading__line {
       width: 5.5em;
+      margin-bottom: 50px;
+      
+      @include tablet {
+        margin-bottom: 60px;
+      }
     }
   }
 
   .project {
-    margin: 40px 0 60px;
+    margin: 0 0 60px;
+
+    div:last-of-type {
+      margin-bottom: 0;
+    }
+
+    @include tablet {
+      margin-bottom: 100px;
+    }
+
     &__header {
       @include home-heading(em(25));
+    }
+
+    &__feature {
+      display: flex;
+      justify-content: space-between;
+      flex-direction: column;
+
+      @include tablet-wide {
+        margin-bottom: 120px;
+      }
+
+      @include desktop {
+        margin-bottom: 160px;
+      }
+    }
+
+    &__feature--overflow {
+      @include tablet-wide {
+        flex-direction: row;
+        width: 105%;
+      }
+
+      @include desktop-wide {
+        width: 106%;
+      }
+
+      @include desktop-wide-l {
+        width: 114%;
+      }
+
+      @include desktop-wide-xl {
+        min-height: 600px;
+        margin-bottom: 330px;
+      }
+    }
+
+    &__feature--column {
+      margin: 0 auto 80px;
+      @include desktop {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 130px;
+      }
+
+      .project__copy {
+        @include desktop {
+          width: 23%;
+          margin: 90px 40px 0 0;
+          text-align: right;
+        }
+      }
+
+      .project__image {
+        @include desktop {
+          margin-bottom: auto;
+          width: 73%;
+        }
+      }
+    }
+
+    &__feature--row {
+      @include desktop {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        max-width: 1200px;
+        margin: 0 auto 130px;
+      }
+
+      .project__copy {
+        @include desktop {
+          max-width: 600px;
+          align-self: center;
+        }
+      }
+
+      .project__image {
+        @include desktop {
+          margin: 0;
+        }
+      }
+    }
+
+    &__feature--chime {
+      width: 100%;
     }
 
     &__image {
       width: 100%;
       margin: 20px 0;
       border: 1px solid $alto;
+
+      @include tablet-wide {
+        width: 100%;
+        max-width: none;
+        border: none;
+        box-shadow: 0 0 18px -4px #80808085
+      }
+    }
+
+    &__image-macbook-wrapper {
+      position: relative;
+      font-size: 20px;
+
+      @include desktop {
+        font-size: 22.5px;
+      }
+
+      @include desktop-wide {
+        font-size: 30px;
+      }
+
+      @include desktop-wide-xl {
+        position: absolute;
+        right: 0;
+        overflow: hidden;
+      }
+    }
+    
+    &__image-macbook {
+      display: none;
+
+      @include tablet-wide {
+        display: block;
+        height: 20em;
+      }
+
+      @include desktop-wide {
+        height: 600px;
+      }
+
+      @include desktop-wide-l {
+        height: 700px;
+      }
+    }
+    
+    &__image-cc-welcome {
+      display: none;
+      position: absolute;
+      
+      @include tablet-wide {
+        display: block;
+        height: 16em;
+        right: -7.05em;
+        bottom: 1.45em;
+      }
+      
+      @include desktop {
+        position: absolute;
+      }
+
+      @include desktop-wide-l {
+        height: 18.65em;
+        right: -8.15em;
+        bottom: 1.7em;
+      }
     }
 
     &__image-mobile {
       display: block;
-      width: 75%;
+      width: 55%;
       margin: 33px auto;
       border: 1px solid $alto;
+
+      @include tablet-wide {
+        width: 35%;
+        border: none;
+      }
+
+      @include desktop {
+        width: 28%;
+        max-width: 360px;
+      }
+    }
+
+    &__intro-copy {
+      @include tablet-wide {
+        margin-top: 20px;
+      }
+      @include desktop {
+        margin-top: 90px;
+      }
+      @include desktop-wide {
+        margin-top: 120px;
+      }
+
+      .project__copy {
+        @include desktop {
+          max-width: 600px;
+        }
+
+        @include desktop-wide-l {
+          max-width: 700px;
+        }
+      }
     }
     
-    &__content {
+    &__copy {
       font-size: 13px;
       letter-spacing: .03125em;
       @include tablet {
@@ -65,6 +283,10 @@
       font-weight: bold;
       text-decoration: underline;
       color: $nile-blue;
+      @include tablet {
+        display: inline-block;
+        margin-top: 10px;
+      }
     }
 
     &__link-icon {
