Clean up CC project desktop layout

--- a/src/jade/projects/_projects-content-body.jade
+++ b/src/jade/projects/_projects-content-body.jade
@@ -16,19 +16,19 @@ main.projects-content
       .project__feature--column
         p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
         img(src="img/dashboards_1x.png", srcset="img/dashboards_1x.png 1x, img/dashboards_2x.png 2x", class="project__image", title="", alt="")
-      .project__feature--column
+      .project__feature--column.project__feature--reverse
         p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
         img(src="img/account_list_1x.png", srcset="img/account_list_1x.png 1x, img/account_list_2x.png 2x", class="project__image", title="", alt="")
-      .project__feature--row
+      .project__feature--column.project__feature--mobile
         p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
         img(src="img/overview_page_iPhone_X.png", class="project__image project__image-mobile", title="", alt="")
       //- desktop only
-      .project__feature--column
+      .project__feature--column.project__feature--reverse
         p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
         img(src="img/customization_page_1x.png", srcset="img/customization_page_1x.png 1x, img/customization_page_2x.png 2x", class="project__image", title="", alt="")
-        a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
-          include ../../svg/misc-icons/link.svg
-          |Check out the latest in cloud management software!
+      a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
+        |Check out the latest in cloud management software!
+        include ../../svg/misc-icons/link.svg
 
     div.project#chime
       h3.home-project__name Chime Signup
@@ -42,8 +42,8 @@ main.projects-content
         p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi.
       p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
       a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
-        include ../../svg/misc-icons/link.svg
         |See it here!
+        include ../../svg/misc-icons/link.svg
 
     div.project#jorsek-docs
       h3.home-project__name Jorsek Docs Portal
@@ -54,8 +54,8 @@ main.projects-content
         p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
         img(src="img/docs_portal_content_1x.png", srcset="img/docs_portal_content_1x.png 1x, img/docs_portal_content_2x.png 2x", class="project__image", title="", alt="")
       a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
-        include ../../svg/misc-icons/link.svg
         |See it here!
+        include ../../svg/misc-icons/link.svg
 
     div.project#sasb-nav
       h3.home-project__name SASB Navigator
@@ -64,8 +64,8 @@ main.projects-content
         img(src="img/SASB_SN_1x.jpg", srcset="img/SASB_SN_1x.jpg 1x, img/SASB_SN_2x.jpg 2x", class="project__image", title="", alt="")
       p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
       a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
-        include ../../svg/misc-icons/link.svg
         |See it here!
+        include ../../svg/misc-icons/link.svg
 
   section.projects-content__group
     h2.projects-content__group-header.section-heading__text For Fun
@@ -78,8 +78,8 @@ main.projects-content
         img(src="img/Better_Reads_1x.png", srcset="img/Better_Reads_1x.png 1x, img/Better_Reads_2x.png 2x", class="project__image", title="", alt="")
       p.project__copy Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit maiores repellat nemo commodi nihil, in, quasi aspernatur officia nam ex id iure autem. Repellat ab soluta quas. Delectus, dolore magni. Totam fugit provident illum culpa nisi. Animi neque sapiente error dolores porro odit, laudantium inventore consectetur maxime iusto magnam doloribus.
       a(href="https://cloudcheckr.com/products/cmx/" target="_blank" class="project__demo-link")
-        include ../../svg/misc-icons/link.svg
         |See it here!
+        include ../../svg/misc-icons/link.svg
 
     div.project#commutecast
       h3.home-project__name CommuteCast
