--- a/src/scss/modules/projects-heading/projects-content-body.scss
+++ b/src/scss/modules/projects-heading/projects-content-body.scss
@@ -114,7 +114,7 @@
       @include desktop {
         display: flex;
         justify-content: center;
-        margin-bottom: 130px;
+        margin-bottom: 320px;
       }
 
       .project__copy {
@@ -127,31 +127,41 @@
 
       .project__image {
         @include desktop {
-          margin-bottom: auto;
           width: 73%;
+          margin-bottom: auto;
         }
       }
     }
 
-    &__feature--row {
+    &__feature--reverse {
       @include desktop {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        max-width: 1200px;
-        margin: 0 auto 130px;
+        flex-direction: row-reverse;
       }
 
       .project__copy {
         @include desktop {
-          max-width: 600px;
-          align-self: center;
+          margin: 90px 0 0 40px;
+          text-align: left;
         }
       }
+    }
 
-      .project__image {
-        @include desktop {
-          margin: 0;
+    &__feature--mobile {
+      @include desktop {
+        justify-content: space-evenly;
+
+        .project__copy {
+          @include desktop {
+            width: 28%;
+            margin: 12% 0 0;
+            text-align: left;
+          }
+        }
+
+        .project__image {
+          @include desktop {
+            width: 27%;
+          }
         }
       }
     }
@@ -245,6 +255,7 @@
       @include desktop {
         width: 28%;
         max-width: 360px;
+        margin: 20px 0;
       }
     }
 
@@ -285,13 +296,13 @@
       color: $nile-blue;
       @include tablet {
         display: inline-block;
-        margin-top: 10px;
+        margin-top: 25px;
       }
     }
 
     &__link-icon {
       width: 1em;
-      margin: 2px 8px 0 0;
+      margin: 2px 0 0 8px;
       fill: $nile-blue;
     }
   }
